Q&A plugin - bug fix - add pre-wrap to announcement.

--- a/modules/QnA/resources/css/qna-threads-list.css
+++ b/modules/QnA/resources/css/qna-threads-list.css
@@ -174,6 +174,7 @@
     margin-right: 14px;
     padding-right: 24px;
     word-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .qnaInterface .qnaAnnouncementTextRead{
@@ -188,6 +189,7 @@
     margin-right: 14px;
     padding-right: 24px;
     word-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .qnaInterface .qnaThreadTime{
